新增全局异常处理器、歌房模块、敏感词过滤、排行榜功能。引入ES完成歌曲搜索功能。优化代码结构